Helloo cooling people ^^

--- a/doc/src/draft.tex
+++ b/doc/src/draft.tex
@@ -219,7 +219,11 @@ information att ta del av om hur vi skulle gå till väga för att göra detta. 
 begränsa oss när det gällde den utsträckning för vilket spelet skulle utvecklas. Att begränsa utvecklingen till en rimlig nivå för spelet 
 och samtidigt ha det tillräckligt intressant för den som spelar.
 
-En stor sak som vi inte han med under projektets gång är att implementera uppdrag. Detta är vad vårt nästa steg skulle vara, nu när det grundläggande fungerar som det ska. 
+En stor sak som vi inte hann med under projektets gång är att implementera uppdrag. Utan uppdrag missar spelet sitt djup, och lyckas inte fånga spelaren. Dessutom ska spelet ha fällor i vissa rum, för att göra färden genom grottorna farligare. 
+
+Vi har arbetat med automatiserad testing medan vi har byggt upp vårt spel. Men på grund av aktöruppbyggnaden av vårt program har det vara svårt att göra annat än enhetstester, och dessa har endast gett ytlig testning av spelet, då mängder av olika händelseförlopp kan inträffa. Så för att uppväga våra brister i automatiserade tester har vi helt enkelt testkört spelet många gånger. 
+
+
 
 \section{Appendix}
 
