--- a/doc/src/draft.tex
+++ b/doc/src/draft.tex
@@ -295,7 +295,7 @@ Kompilering av systemet sker med hjälp av ANT, Apache's byggsystem, och är aut
 \item[run\_tests] \hfill \\ Kompilerar alla testens scalafiler och kör automatiska enhetstester genom Scalatest.
 \item[archive] \hfill \\ Återställer kompilatoromgivningen samt skapar .tar.gz arkiv som följer projektanvisningarnas namn och katalogstruktur.
 \item[run\_server] \hfill \\ Kompilerar alla serverns scalafiler, skapar samt kör ett körbart \textbf{server.jar} arkiv i rotmappen.
-\item[run\_server] \hfill \\ Kompilerar alla klientens scala- och javafiler, skapar samt kör ett körbart \textbf{client.jar} arkiv i rotmappen.
+\item[run\_client] \hfill \\ Kompilerar alla klientens scala- och javafiler, skapar samt kör ett körbart \textbf{client.jar} arkiv i rotmappen.
 \end{description}
 
 \subsection{Körning}
